--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transaction Table</title>
     <link rel="stylesheet" href="./style.css">
+    <!-- <link rel="stylesheet" href="./print.css"> -->
 </head>
 
 <body>
@@ -136,7 +137,7 @@
 }
 ,
             { date: "2025-02-03", mode: "Bank Transfer", particulars: "Rent Payment", deposits: 0, withdrawals: 800, balance: 1200 },
-            { date: "2025-02-05", mode: "UPI", particulars: "Grocery", deposits: 0, withdrawals: 150, balance: 1050 },
+            { date: "2025-02-05", mode: "NET BANKING", particulars: "Grocery", deposits: 0, withdrawals: 150, balance: 1050 },
             { date: "2025-02-10", mode: "Cash", particulars: "Freelance Income", deposits: 500, withdrawals: 0, balance: 1550 }
         ];
 
