--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
                     <td class="table-deposits">${tran.deposits}</td>
                     <td class="table-withdrawals">${tran.withdrawals}</td>
                     <td class="table-balance">${tran.balance}</td>
-                </tr>`;
+                </tr> <div class="line"></div>`
+                ;
                 tableBody.innerHTML += row;
             });
         }
