--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <p class="ac-details">ACCOUNT DETAILS - INR
             </p>
         </div>
+       <div class="summary">
         <div class="ac-summery">
             <div class="account-type"><p>ACCOUNT TYPE</p></div>
             <div class="account-balance">  <p>ACCOUNT BALANCE (I)</p> </div>
@@ -75,6 +76,7 @@
             <div class="account-balance">  <p>151.95 </p> </div>
             <div class="nomonation"><p>Not Registered</p></div>
         </div>
+       </div>
         <!-- total -->
          <div class="total-area">
             <div class="total-head">
