--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="right-bottom">
                     <div class="right-visit">
-                        <img src="./assets/phone.png" alt="alt">
+                        <img src="./assets/computer (1).png" alt="alt">
                         <p class="visit-img">Visit www.icicibank.com</p>
                     </div>
                     <div class="right-call">
